Removed logging debug on settings; Fixed dancing around of elements on index because of the scrollbars; Now allowing to view workouts in another users route (without allowing to see the edit component); Added workout visible/editable methods on the backend

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
 
+body {
+  overflow-y: scroll;
+}
+
 a {
   text-decoration: inherit;
   color: inherit;
@@ -98,6 +102,7 @@ span {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .site-content {
